Anchors on contact info items are fixed: covering bigger area now. Polished Impressum page.

--- a/public/css/responsive-styles.css
+++ b/public/css/responsive-styles.css
@@ -43,7 +43,7 @@
         justify-content: space-around;
     }
 
-    .contact-info li {
+    .contact-info a {
         margin-bottom: 31px;
     }
 
